--- a/Code/Classification/SVM/SVM_Predictions_Individual_Features_PCA.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_Individual_Features_PCA.ipynb
@@ -247,6 +247,14 @@
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction time in minutes:  0.23764163653055828\n",
+      "Prediction time per image in minutes:  0.0001595981440769364\n"
+     ]
     }
    ],
    "source": [
