add evalaution files

--- a/Code/Evaluation/Confusion_matrix_Master_function.ipynb
+++ b/Code/Evaluation/Confusion_matrix_Master_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f6ffd314",
    "metadata": {},
    "outputs": [],
@@ -20,78 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "add26373",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Class                           harmonized_filename  \\\n",
-      "0          Pickup       Pickup_test_orig_test_05620_resized.jpg   \n",
-      "1             SUV          SUV_test_orig_test_08041_resized.jpg   \n",
-      "2     Convertible  Convertible_test_orig_test_00822_resized.jpg   \n",
-      "3     Convertible  Convertible_test_orig_test_00618_resized.jpg   \n",
-      "4          Pickup       Pickup_test_orig_test_05241_resized.jpg   \n",
-      "...           ...                                           ...   \n",
-      "1484          SUV          SUV_test_orig_test_07199_resized.jpg   \n",
-      "1485  Convertible  Convertible_test_orig_test_06645_resized.jpg   \n",
-      "1486        Sedan       Sedan_test_orig_train_00676_resized.jpg   \n",
-      "1487        Sedan       Sedan_test_orig_train_04786_resized.jpg   \n",
-      "1488          SUV         SUV_test_orig_train_03571_resized.jpg   \n",
-      "\n",
-      "                                        image_path_blur  \\\n",
-      "0     ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
-      "1     ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "2     ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "3     ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "4     ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
-      "...                                                 ...   \n",
-      "1484  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "1485  ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "1486  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "1487  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "1488  ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
-      "\n",
-      "                                     image_path_no_blur  \\\n",
-      "0     ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
-      "1     ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
-      "2     ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "3     ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "4     ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
-      "...                                                 ...   \n",
-      "1484  ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
-      "1485  ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "1486  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "1487  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "1488  ../../../Images/test/No_Blur/SUV_test_orig_tra...   \n",
-      "\n",
-      "     Logistic_Regression_Classification  \n",
-      "0                                   SUV  \n",
-      "1                                 Sedan  \n",
-      "2                           Convertible  \n",
-      "3                           Convertible  \n",
-      "4                                Pickup  \n",
-      "...                                 ...  \n",
-      "1484                                SUV  \n",
-      "1485                        Convertible  \n",
-      "1486                              Sedan  \n",
-      "1487                              Sedan  \n",
-      "1488                                SUV  \n",
-      "\n",
-      "[1489 rows x 5 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_excel('../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions_All_Features_PCA.xlsx')\n",
-    "print(data)"
+    "# print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "616fda68",
    "metadata": {},
    "outputs": [
@@ -218,17 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "de075311",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analyze_classifier_performance(base_path, classifier_name):\n",
+    "def analyze_classifier_performance(base_path, classifier_name,images_root_dir):\n",
     "    \n",
     "    classifier_colors = {\n",
     "        'Logistic Regression': 'Blues',\n",
     "        'XGBoost': 'Reds',\n",
-    "        'SVM': 'Greens'\n",
+    "        'SVM': 'Greens',\n",
+    "        'Random Forest':'YlGnBu'\n",
     "    }\n",
     "    \n",
     "    classifier_dir = os.path.join(base_path, classifier_name)\n",
@@ -269,27 +210,42 @@
     "\n",
     "\n",
     "\n",
-    "#     # Misclassified Images\n",
-    "#     misclassified_indices = np.where(actual_labels != predicted_labels)[0]\n",
-    "#     selected_indices = random.sample(list(misclassified_indices), min(5, len(misclassified_indices)))\n",
-    "#     if selected_indices:\n",
-    "#         plt.figure(figsize=(20, 4))\n",
-    "#         for i, index in enumerate(selected_indices, 1):\n",
-    "#             excel_image_path = data.iloc[index]['image_path_no_blur'].strip()\n",
-    "#             adjusted_image_path = excel_image_path.lstrip('.').lstrip('/').split('/', 3)[-1]\n",
-    "#             full_image_path = os.path.join(images_root_dir, adjusted_image_path)\n",
-    "#             image = Image.open(full_image_path)\n",
-    "#             plt.subplot(1, 5, i)\n",
-    "#             plt.imshow(image)\n",
-    "#             plt.title(f'{actual_labels[index]} Misclassified As {predicted_labels[index]}')\n",
-    "#             plt.axis('off')\n",
-    "#         plt.savefig(f'{classifier_name}_Misclassified_Images.png')\n",
-    "#         plt.close()"
+    "    # Misclassified Images\n",
+    "    misclassified_indices = np.where(actual_labels != predicted_labels)[0]\n",
+    "    selected_indices = random.sample(list(misclassified_indices), min(5, len(misclassified_indices)))\n",
+    "    if selected_indices:\n",
+    "        plt.figure(figsize=(20, 4))\n",
+    "        for i, index in enumerate(selected_indices, 1):\n",
+    "            # Get the relative image path from the Excel file and strip off any leading './' or '/'\n",
+    "            excel_image_path = data.iloc[index]['image_path_no_blur'].strip().lstrip('.').lstrip('/')\n",
+    "            # Correct the path by removing additional '../' if present\n",
+    "            while excel_image_path.startswith('..'):\n",
+    "                excel_image_path = '/'.join(excel_image_path.split('/', 2)[1:])\n",
+    "            # Replace underscores with spaces for directory names\n",
+    "            excel_image_path = excel_image_path.replace('No_Blur', 'No Blur')\n",
+    "            # Add the '_no_blur' suffix to the filename part of the path\n",
+    "            path_parts = excel_image_path.split('/')\n",
+    "            filename_no_blur = path_parts[-1].split('.')[0] + '_no_blur.jpg'\n",
+    "            path_parts[-1] = filename_no_blur\n",
+    "            # Reconstruct the full path with the root directory and the modified filename\n",
+    "            full_image_path = os.path.join(images_root_dir, *path_parts)\n",
+    "\n",
+    "            try:\n",
+    "                image = Image.open(full_image_path)\n",
+    "                plt.subplot(1, 5, i)\n",
+    "                plt.imshow(image)\n",
+    "                plt.title(f'{actual_labels[index]} Misclassified As {predicted_labels[index]}')\n",
+    "                plt.axis('off')\n",
+    "            except FileNotFoundError:\n",
+    "                print(f\"File not found: {full_image_path}\")\n",
+    "\n",
+    "        plt.savefig(f'{classifier_name}_Misclassified_Images.png')\n",
+    "        plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "370b3d50",
    "metadata": {},
    "outputs": [
@@ -300,19 +256,28 @@
       "Processed ../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions_Individual_Features_PCA.xlsx:\n",
       " - Classification report saved as Logistic_Regression_Classifier_Predictions_Individual_Features_PCA_Classification_Report.xlsx\n",
       " - Confusion matrix image saved as Logistic_Regression_Classifier_Predictions_Individual_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions_All_Data.xlsx:\n",
+      " - Classification report saved as Logistic_Regression_Classifier_Predictions_All_Data_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Logistic_Regression_Classifier_Predictions_All_Data_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions_VGG.xlsx:\n",
+      " - Classification report saved as Logistic_Regression_Classifier_Predictions_VGG_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Logistic_Regression_Classifier_Predictions_VGG_Confusion_Matrix.png\n",
       "Processed ../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions_All_Features_PCA.xlsx:\n",
       " - Classification report saved as Logistic_Regression_Classifier_Predictions_All_Features_PCA_Classification_Report.xlsx\n",
-      " - Confusion matrix image saved as Logistic_Regression_Classifier_Predictions_All_Features_PCA_Confusion_Matrix.png\n"
+      " - Confusion matrix image saved as Logistic_Regression_Classifier_Predictions_All_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions_Top3_Features.xlsx:\n",
+      " - Classification report saved as Logistic_Regression_Classifier_Predictions_Top3_Features_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Logistic_Regression_Classifier_Predictions_Top3_Features_Confusion_Matrix.png\n"
      ]
     }
    ],
    "source": [
-    "analyze_classifier_performance('../../Data/Predictions/', 'Logistic Regression')"
+    "analyze_classifier_performance('../../Data/Predictions/', 'Logistic Regression','../../')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "bb8a6222",
    "metadata": {},
    "outputs": [
@@ -320,9 +285,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processed ../../Data/Predictions/SVM/SVM_Classifier_Predictions_VGG.xlsx:\n",
+      " - Classification report saved as SVM_Classifier_Predictions_VGG_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as SVM_Classifier_Predictions_VGG_Confusion_Matrix.png\n",
       "Processed ../../Data/Predictions/SVM/SVM_Classifier_Predictions_Individual_Features_PCA.xlsx:\n",
       " - Classification report saved as SVM_Classifier_Predictions_Individual_Features_PCA_Classification_Report.xlsx\n",
       " - Confusion matrix image saved as SVM_Classifier_Predictions_Individual_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/SVM/SVM_Classifier_Predictions_Top3_Features.xlsx:\n",
+      " - Classification report saved as SVM_Classifier_Predictions_Top3_Features_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as SVM_Classifier_Predictions_Top3_Features_Confusion_Matrix.png\n",
       "Processed ../../Data/Predictions/SVM/SVM_Classifier_Predictions_All_Features_PCA.xlsx:\n",
       " - Classification report saved as SVM_Classifier_Predictions_All_Features_PCA_Classification_Report.xlsx\n",
       " - Confusion matrix image saved as SVM_Classifier_Predictions_All_Features_PCA_Confusion_Matrix.png\n"
@@ -330,12 +301,12 @@
     }
    ],
    "source": [
-    "analyze_classifier_performance('../../Data/Predictions/', 'SVM')"
+    "analyze_classifier_performance('../../Data/Predictions/', 'SVM','../../')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "b78c9249",
    "metadata": {},
    "outputs": [
@@ -346,16 +317,57 @@
       "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_All_Features_PCA.xlsx:\n",
       " - Classification report saved as XGBoost_Classifier_Predictions_All_Features_PCA_Classification_Report.xlsx\n",
       " - Confusion matrix image saved as XGBoost_Classifier_Predictions_All_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_Top3_Features.xlsx:\n",
+      " - Classification report saved as XGBoost_Classifier_Predictions_Top3_Features_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_Top3_Features_Confusion_Matrix.png\n",
       "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_Individual_Features_PCA.xlsx:\n",
       " - Classification report saved as XGBoost_Classifier_Predictions_Individual_Features_PCA_Classification_Report.xlsx\n",
-      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_Individual_Features_PCA_Confusion_Matrix.png\n"
+      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_Individual_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_VGG.xlsx:\n",
+      " - Classification report saved as XGBoost_Classifier_Predictions_VGG_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_VGG_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_All_Data.xlsx:\n",
+      " - Classification report saved as XGBoost_Classifier_Predictions_All_Data_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_All_Data_Confusion_Matrix.png\n"
      ]
     }
    ],
    "source": [
     "#run this to get the Confusion matrix and classfication report files\n",
     "\n",
-    "analyze_classifier_performance('../../Data/Predictions/', 'XGBoost')"
+    "analyze_classifier_performance('../../Data/Predictions/', 'XGBoost','../../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8314c8e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed ../../Data/Predictions/Random Forest/Random_Forest_Classifier_Predictions_Top3_Features.xlsx:\n",
+      " - Classification report saved as Random_Forest_Classifier_Predictions_Top3_Features_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Random_Forest_Classifier_Predictions_Top3_Features_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Random Forest/Random_Forest_Classifier_Predictions_VGG.xlsx:\n",
+      " - Classification report saved as Random_Forest_Classifier_Predictions_VGG_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Random_Forest_Classifier_Predictions_VGG_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Random Forest/Random_Forest_Classifier_Predictions_All_Data.xlsx:\n",
+      " - Classification report saved as Random_Forest_Classifier_Predictions_All_Data_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Random_Forest_Classifier_Predictions_All_Data_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Random Forest/Random_Forest_Classifier_Predictions_All_Features_PCA.xlsx:\n",
+      " - Classification report saved as Random_Forest_Classifier_Predictions_All_Features_PCA_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Random_Forest_Classifier_Predictions_All_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/Random Forest/Random_Forest_Classifier_Predictions_Individual_Features_PCA.xlsx:\n",
+      " - Classification report saved as Random_Forest_Classifier_Predictions_Individual_Features_PCA_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as Random_Forest_Classifier_Predictions_Individual_Features_PCA_Confusion_Matrix.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyze_classifier_performance('../../Data/Predictions/', 'Random Forest','../../')"
    ]
   }
  ],
@@ -375,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
