--- a/Code/Evaluation/Grid Search Table.ipynb
+++ b/Code/Evaluation/Grid Search Table.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "62                                                  5  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,147 +390,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_943f9 th {\n",
+       "#T_133b9 th {\n",
        "  text-align: center;\n",
        "}\n",
-       "#T_943f9_row0_col0, #T_943f9_row0_col1, #T_943f9_row0_col2, #T_943f9_row1_col0, #T_943f9_row1_col1, #T_943f9_row1_col2, #T_943f9_row2_col0, #T_943f9_row2_col1, #T_943f9_row2_col2, #T_943f9_row3_col0, #T_943f9_row3_col1, #T_943f9_row3_col2, #T_943f9_row4_col0, #T_943f9_row4_col1, #T_943f9_row4_col2, #T_943f9_row5_col0, #T_943f9_row5_col1, #T_943f9_row5_col2, #T_943f9_row6_col0, #T_943f9_row6_col1, #T_943f9_row6_col2, #T_943f9_row7_col0, #T_943f9_row7_col1, #T_943f9_row7_col2, #T_943f9_row8_col0, #T_943f9_row8_col1, #T_943f9_row8_col2, #T_943f9_row9_col0, #T_943f9_row9_col1, #T_943f9_row9_col2, #T_943f9_row10_col0, #T_943f9_row10_col1, #T_943f9_row10_col2, #T_943f9_row11_col0, #T_943f9_row11_col1, #T_943f9_row11_col2, #T_943f9_row12_col0, #T_943f9_row12_col1, #T_943f9_row12_col2, #T_943f9_row13_col0, #T_943f9_row13_col1, #T_943f9_row13_col2, #T_943f9_row14_col0, #T_943f9_row14_col1, #T_943f9_row14_col2, #T_943f9_row15_col0, #T_943f9_row15_col1, #T_943f9_row15_col2, #T_943f9_row16_col0, #T_943f9_row16_col1, #T_943f9_row16_col2, #T_943f9_row17_col0, #T_943f9_row17_col1, #T_943f9_row17_col2, #T_943f9_row18_col0, #T_943f9_row18_col1, #T_943f9_row18_col2, #T_943f9_row19_col0, #T_943f9_row19_col1, #T_943f9_row19_col2, #T_943f9_row20_col0, #T_943f9_row20_col1, #T_943f9_row20_col2 {\n",
+       "#T_133b9_row0_col0, #T_133b9_row0_col1, #T_133b9_row0_col2, #T_133b9_row1_col0, #T_133b9_row1_col1, #T_133b9_row1_col2, #T_133b9_row2_col0, #T_133b9_row2_col1, #T_133b9_row2_col2, #T_133b9_row3_col0, #T_133b9_row3_col1, #T_133b9_row3_col2, #T_133b9_row4_col0, #T_133b9_row4_col1, #T_133b9_row4_col2, #T_133b9_row5_col0, #T_133b9_row5_col1, #T_133b9_row5_col2, #T_133b9_row6_col0, #T_133b9_row6_col1, #T_133b9_row6_col2, #T_133b9_row7_col0, #T_133b9_row7_col1, #T_133b9_row7_col2, #T_133b9_row8_col0, #T_133b9_row8_col1, #T_133b9_row8_col2, #T_133b9_row9_col0, #T_133b9_row9_col1, #T_133b9_row9_col2, #T_133b9_row10_col0, #T_133b9_row10_col1, #T_133b9_row10_col2, #T_133b9_row11_col0, #T_133b9_row11_col1, #T_133b9_row11_col2, #T_133b9_row12_col0, #T_133b9_row12_col1, #T_133b9_row12_col2, #T_133b9_row13_col0, #T_133b9_row13_col1, #T_133b9_row13_col2, #T_133b9_row14_col0, #T_133b9_row14_col1, #T_133b9_row14_col2, #T_133b9_row15_col0, #T_133b9_row15_col1, #T_133b9_row15_col2, #T_133b9_row16_col0, #T_133b9_row16_col1, #T_133b9_row16_col2, #T_133b9_row17_col0, #T_133b9_row17_col1, #T_133b9_row17_col2, #T_133b9_row18_col0, #T_133b9_row18_col1, #T_133b9_row18_col2, #T_133b9_row19_col0, #T_133b9_row19_col1, #T_133b9_row19_col2, #T_133b9_row20_col0, #T_133b9_row20_col1, #T_133b9_row20_col2 {\n",
        "  text-align: center;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_943f9\">\n",
+       "<table id=\"T_133b9\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_943f9_level0_col0\" class=\"col_heading level0 col0\" >Classifier</th>\n",
-       "      <th id=\"T_943f9_level0_col1\" class=\"col_heading level0 col1\" >Hyperparameter</th>\n",
-       "      <th id=\"T_943f9_level0_col2\" class=\"col_heading level0 col2\" >Options</th>\n",
+       "      <th id=\"T_133b9_level0_col0\" class=\"col_heading level0 col0\" >Classifier</th>\n",
+       "      <th id=\"T_133b9_level0_col1\" class=\"col_heading level0 col1\" >Hyperparameter</th>\n",
+       "      <th id=\"T_133b9_level0_col2\" class=\"col_heading level0 col2\" >Options</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_943f9_row0_col1\" class=\"data row0 col1\" >solver</td>\n",
-       "      <td id=\"T_943f9_row0_col2\" class=\"data row0 col2\" >saga</td>\n",
+       "      <td id=\"T_133b9_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_133b9_row0_col1\" class=\"data row0 col1\" >solver</td>\n",
+       "      <td id=\"T_133b9_row0_col2\" class=\"data row0 col2\" >saga</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_943f9_row1_col1\" class=\"data row1 col1\" >penalty</td>\n",
-       "      <td id=\"T_943f9_row1_col2\" class=\"data row1 col2\" >None, elasticnet</td>\n",
+       "      <td id=\"T_133b9_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_133b9_row1_col1\" class=\"data row1 col1\" >penalty</td>\n",
+       "      <td id=\"T_133b9_row1_col2\" class=\"data row1 col2\" >None, elasticnet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_943f9_row2_col1\" class=\"data row2 col1\" >C</td>\n",
-       "      <td id=\"T_943f9_row2_col2\" class=\"data row2 col2\" >1, 0.001, 0.01, 0.1, 10, 100</td>\n",
+       "      <td id=\"T_133b9_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_133b9_row2_col1\" class=\"data row2 col1\" >C</td>\n",
+       "      <td id=\"T_133b9_row2_col2\" class=\"data row2 col2\" >1, 0.001, 0.01, 0.1, 10, 100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row3_col0\" class=\"data row3 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_943f9_row3_col1\" class=\"data row3 col1\" >class_weight</td>\n",
-       "      <td id=\"T_943f9_row3_col2\" class=\"data row3 col2\" >None, balanced</td>\n",
+       "      <td id=\"T_133b9_row3_col0\" class=\"data row3 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_133b9_row3_col1\" class=\"data row3 col1\" >class_weight</td>\n",
+       "      <td id=\"T_133b9_row3_col2\" class=\"data row3 col2\" >None, balanced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row4_col0\" class=\"data row4 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_943f9_row4_col1\" class=\"data row4 col1\" >multi_class</td>\n",
-       "      <td id=\"T_943f9_row4_col2\" class=\"data row4 col2\" >ovr, multinomial</td>\n",
+       "      <td id=\"T_133b9_row4_col0\" class=\"data row4 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_133b9_row4_col1\" class=\"data row4 col1\" >multi_class</td>\n",
+       "      <td id=\"T_133b9_row4_col2\" class=\"data row4 col2\" >ovr, multinomial</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row5_col0\" class=\"data row5 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_943f9_row5_col1\" class=\"data row5 col1\" >l1_ratio</td>\n",
-       "      <td id=\"T_943f9_row5_col2\" class=\"data row5 col2\" >0.0, 0.25, 0.5, 0.75, 1.0</td>\n",
+       "      <td id=\"T_133b9_row5_col0\" class=\"data row5 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_133b9_row5_col1\" class=\"data row5 col1\" >l1_ratio</td>\n",
+       "      <td id=\"T_133b9_row5_col2\" class=\"data row5 col2\" >0.0, 0.25, 0.5, 0.75, 1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row6_col0\" class=\"data row6 col0\" >Random Forest</td>\n",
-       "      <td id=\"T_943f9_row6_col1\" class=\"data row6 col1\" >n_estimators</td>\n",
-       "      <td id=\"T_943f9_row6_col2\" class=\"data row6 col2\" >500, 1000, 1500</td>\n",
+       "      <td id=\"T_133b9_row6_col0\" class=\"data row6 col0\" >Random Forest</td>\n",
+       "      <td id=\"T_133b9_row6_col1\" class=\"data row6 col1\" >n_estimators</td>\n",
+       "      <td id=\"T_133b9_row6_col2\" class=\"data row6 col2\" >500, 1000, 1500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row7_col0\" class=\"data row7 col0\" >Random Forest</td>\n",
-       "      <td id=\"T_943f9_row7_col1\" class=\"data row7 col1\" >max_features</td>\n",
-       "      <td id=\"T_943f9_row7_col2\" class=\"data row7 col2\" >sqrt</td>\n",
+       "      <td id=\"T_133b9_row7_col0\" class=\"data row7 col0\" >Random Forest</td>\n",
+       "      <td id=\"T_133b9_row7_col1\" class=\"data row7 col1\" >max_features</td>\n",
+       "      <td id=\"T_133b9_row7_col2\" class=\"data row7 col2\" >sqrt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row8_col0\" class=\"data row8 col0\" >Random Forest</td>\n",
-       "      <td id=\"T_943f9_row8_col1\" class=\"data row8 col1\" >max_depth</td>\n",
-       "      <td id=\"T_943f9_row8_col2\" class=\"data row8 col2\" >20, 40, 60, 80</td>\n",
+       "      <td id=\"T_133b9_row8_col0\" class=\"data row8 col0\" >Random Forest</td>\n",
+       "      <td id=\"T_133b9_row8_col1\" class=\"data row8 col1\" >max_depth</td>\n",
+       "      <td id=\"T_133b9_row8_col2\" class=\"data row8 col2\" >20, 40, 60, 80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row9_col0\" class=\"data row9 col0\" >Random Forest</td>\n",
-       "      <td id=\"T_943f9_row9_col1\" class=\"data row9 col1\" >bootstrap</td>\n",
-       "      <td id=\"T_943f9_row9_col2\" class=\"data row9 col2\" >True, False</td>\n",
+       "      <td id=\"T_133b9_row9_col0\" class=\"data row9 col0\" >Random Forest</td>\n",
+       "      <td id=\"T_133b9_row9_col1\" class=\"data row9 col1\" >bootstrap</td>\n",
+       "      <td id=\"T_133b9_row9_col2\" class=\"data row9 col2\" >True, False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row10_col0\" class=\"data row10 col0\" >Random Forest</td>\n",
-       "      <td id=\"T_943f9_row10_col1\" class=\"data row10 col1\" >min_samples_leaf</td>\n",
-       "      <td id=\"T_943f9_row10_col2\" class=\"data row10 col2\" >1, 2</td>\n",
+       "      <td id=\"T_133b9_row10_col0\" class=\"data row10 col0\" >Random Forest</td>\n",
+       "      <td id=\"T_133b9_row10_col1\" class=\"data row10 col1\" >min_samples_leaf</td>\n",
+       "      <td id=\"T_133b9_row10_col2\" class=\"data row10 col2\" >1, 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row11_col0\" class=\"data row11 col0\" >SVM</td>\n",
-       "      <td id=\"T_943f9_row11_col1\" class=\"data row11 col1\" >c_values</td>\n",
-       "      <td id=\"T_943f9_row11_col2\" class=\"data row11 col2\" >0.01, 0.31622776601683794, 10.0</td>\n",
+       "      <td id=\"T_133b9_row11_col0\" class=\"data row11 col0\" >SVM</td>\n",
+       "      <td id=\"T_133b9_row11_col1\" class=\"data row11 col1\" >c_values</td>\n",
+       "      <td id=\"T_133b9_row11_col2\" class=\"data row11 col2\" >0.01, 0.32, 10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row12_col0\" class=\"data row12 col0\" >SVM</td>\n",
-       "      <td id=\"T_943f9_row12_col1\" class=\"data row12 col1\" >kernel_grid</td>\n",
-       "      <td id=\"T_943f9_row12_col2\" class=\"data row12 col2\" >rbf</td>\n",
+       "      <td id=\"T_133b9_row12_col0\" class=\"data row12 col0\" >SVM</td>\n",
+       "      <td id=\"T_133b9_row12_col1\" class=\"data row12 col1\" >kernel_grid</td>\n",
+       "      <td id=\"T_133b9_row12_col2\" class=\"data row12 col2\" >rbf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row13_col0\" class=\"data row13 col0\" >SVM</td>\n",
-       "      <td id=\"T_943f9_row13_col1\" class=\"data row13 col1\" >gamma_grid</td>\n",
-       "      <td id=\"T_943f9_row13_col2\" class=\"data row13 col2\" >1e-05, 0.00025118864315095795, 0.00630957344480193, 0.1584893192461111, 3.981071705534969, 100.0, scale</td>\n",
+       "      <td id=\"T_133b9_row13_col0\" class=\"data row13 col0\" >SVM</td>\n",
+       "      <td id=\"T_133b9_row13_col1\" class=\"data row13 col1\" >gamma_grid</td>\n",
+       "      <td id=\"T_133b9_row13_col2\" class=\"data row13 col2\" >1e-05, 2.51e-04, 6.31e-03, 0.16, 3.98, 100.0, scale</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row14_col0\" class=\"data row14 col0\" >SVM</td>\n",
-       "      <td id=\"T_943f9_row14_col1\" class=\"data row14 col1\" >class_weight</td>\n",
-       "      <td id=\"T_943f9_row14_col2\" class=\"data row14 col2\" >balanced, None</td>\n",
+       "      <td id=\"T_133b9_row14_col0\" class=\"data row14 col0\" >SVM</td>\n",
+       "      <td id=\"T_133b9_row14_col1\" class=\"data row14 col1\" >class_weight</td>\n",
+       "      <td id=\"T_133b9_row14_col2\" class=\"data row14 col2\" >balanced, None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row15_col0\" class=\"data row15 col0\" >SVM</td>\n",
-       "      <td id=\"T_943f9_row15_col1\" class=\"data row15 col1\" >k_folds</td>\n",
-       "      <td id=\"T_943f9_row15_col2\" class=\"data row15 col2\" >5</td>\n",
+       "      <td id=\"T_133b9_row15_col0\" class=\"data row15 col0\" >SVM</td>\n",
+       "      <td id=\"T_133b9_row15_col1\" class=\"data row15 col1\" >k_folds</td>\n",
+       "      <td id=\"T_133b9_row15_col2\" class=\"data row15 col2\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row16_col0\" class=\"data row16 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_943f9_row16_col1\" class=\"data row16 col1\" >n_estimators</td>\n",
-       "      <td id=\"T_943f9_row16_col2\" class=\"data row16 col2\" >100, 200, 300</td>\n",
+       "      <td id=\"T_133b9_row16_col0\" class=\"data row16 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_133b9_row16_col1\" class=\"data row16 col1\" >n_estimators</td>\n",
+       "      <td id=\"T_133b9_row16_col2\" class=\"data row16 col2\" >100, 200, 300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row17_col0\" class=\"data row17 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_943f9_row17_col1\" class=\"data row17 col1\" >learning_rate</td>\n",
-       "      <td id=\"T_943f9_row17_col2\" class=\"data row17 col2\" >0.1, 0.3, 0.5</td>\n",
+       "      <td id=\"T_133b9_row17_col0\" class=\"data row17 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_133b9_row17_col1\" class=\"data row17 col1\" >learning_rate</td>\n",
+       "      <td id=\"T_133b9_row17_col2\" class=\"data row17 col2\" >0.1, 0.3, 0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row18_col0\" class=\"data row18 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_943f9_row18_col1\" class=\"data row18 col1\" >max_depth</td>\n",
-       "      <td id=\"T_943f9_row18_col2\" class=\"data row18 col2\" >2, 3, 5</td>\n",
+       "      <td id=\"T_133b9_row18_col0\" class=\"data row18 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_133b9_row18_col1\" class=\"data row18 col1\" >max_depth</td>\n",
+       "      <td id=\"T_133b9_row18_col2\" class=\"data row18 col2\" >2, 3, 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row19_col0\" class=\"data row19 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_943f9_row19_col1\" class=\"data row19 col1\" >min_child_weight</td>\n",
-       "      <td id=\"T_943f9_row19_col2\" class=\"data row19 col2\" >1, 3, 5</td>\n",
+       "      <td id=\"T_133b9_row19_col0\" class=\"data row19 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_133b9_row19_col1\" class=\"data row19 col1\" >min_child_weight</td>\n",
+       "      <td id=\"T_133b9_row19_col2\" class=\"data row19 col2\" >1, 3, 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_943f9_row20_col0\" class=\"data row20 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_943f9_row20_col1\" class=\"data row20 col1\" >k_folds</td>\n",
-       "      <td id=\"T_943f9_row20_col2\" class=\"data row20 col2\" >5</td>\n",
+       "      <td id=\"T_133b9_row20_col0\" class=\"data row20 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_133b9_row20_col1\" class=\"data row20 col1\" >k_folds</td>\n",
+       "      <td id=\"T_133b9_row20_col2\" class=\"data row20 col2\" >5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x235ff401df0>"
+       "<pandas.io.formats.style.Styler at 0x1d97d6db9e0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Replace 0.00025118864315095795 with 2.51e-04 in Options strings\n",
+    "classifier_settings_df['Options'] = classifier_settings_df['Options'].str.replace('0.00025118864315095795', '2.51e-04')\n",
+    "# Replace 0.00630957344480193 with 6.31e-03 in Options strings\n",
+    "classifier_settings_df['Options'] = classifier_settings_df['Options'].str.replace('0.00630957344480193', '6.31e-03')\n",
+    "# Replace 0.1584893192461111 with 0.16 in Options strings\n",
+    "classifier_settings_df['Options'] = classifier_settings_df['Options'].str.replace('0.1584893192461111', '0.16')\n",
+    "# Replace 3.981071705534969 with 3.98 in Options strings\n",
+    "classifier_settings_df['Options'] = classifier_settings_df['Options'].str.replace('3.981071705534969', '3.98')\n",
+    "# Replace 0.31622776601683794 with 0.32 in Options strings\n",
+    "classifier_settings_df['Options'] = classifier_settings_df['Options'].str.replace('0.31622776601683794', '0.32')\n",
+    "\n",
     "# Styled grid search output table\n",
     "grid_search_table = (classifier_settings_df.style\n",
     "                                        .format(thousands=\",\", decimal=\".\")\n",
