--- a/Code/Evaluation/Confusion_matrix_Master_function.ipynb
+++ b/Code/Evaluation/Confusion_matrix_Master_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f6ffd314",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "add26373",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "616fda68",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ce6bce9f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f4bf94fb",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d198e1a1",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "68d7d4f6",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1b5fe0b0",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "de075311",
    "metadata": {},
    "outputs": [],
@@ -187,16 +187,19 @@
     "        predicted_column = [col for col in data.columns if 'Classification' in col][0]\n",
     "        predicted_labels = data[predicted_column]\n",
     "\n",
-    "        #Classification Report\n",
+    "        # Classification Report\n",
     "        report = classification_report(actual_labels, predicted_labels, output_dict=True)\n",
     "        report_file_name = f'{base_file_name}_Classification_Report.xlsx'\n",
     "        pd.DataFrame(report).transpose().to_excel(report_file_name)\n",
     "\n",
-    "         # Confusion Matrix\n",
+    "        # Confusion Matrix - Modified to show percentages\n",
     "        cm_color = classifier_colors.get(classifier_name, 'Blues')\n",
     "        cm = confusion_matrix(actual_labels, predicted_labels, labels=np.unique(actual_labels))\n",
+    "        # Normalize the confusion matrix by rows (i.e., by the number of actual instances in each class)\n",
+    "        cm_normalized = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "        plt.figure(figsize=(10, 7))\n",
-    "        sns.heatmap(cm, annot=True, fmt=\"d\", cmap=cm_color, xticklabels=actual_labels.unique(), yticklabels=actual_labels.unique())\n",
+    "        sns.heatmap(cm_normalized, annot=True, fmt=\".2%\", cmap=cm_color, \n",
+    "                    xticklabels=np.unique(actual_labels), yticklabels=np.unique(actual_labels))\n",
     "        plt.xlabel('Predicted Labels')\n",
     "        plt.ylabel('Actual Labels')\n",
     "        plt.title(f'Confusion Matrix for {base_file_name}')\n",
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "370b3d50",
    "metadata": {},
    "outputs": [
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "bb8a6222",
    "metadata": {},
    "outputs": [
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "b78c9249",
    "metadata": {},
    "outputs": [
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "8314c8e5",
    "metadata": {},
    "outputs": [
