finished finetuned resnet end-to-end

--- a/Code/Classification/ResNet/ResNet Predictions.ipynb
+++ b/Code/Classification/ResNet/ResNet Predictions.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\torchvision\\io\\image.py:13: UserWarning: Failed to load image Python extension: '[WinError 127] The specified procedure could not be found'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+      "  warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Packages\n",
     "import torch\n",
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +134,7 @@
        "4  ../../../Images/test/No_Blur/Pickup_test_orig_...  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +371,7 @@
        ")"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -444,27 +453,27 @@
     "# Create dataframe\n",
     "predictions_df = combined_df.copy()\n",
     "# Add predictions\n",
-    "predictions_df['ResNet_predictions'] = [torch.argmax(p).item() for p in predictions]\n",
+    "predictions_df['ResNet_Classification'] = [torch.argmax(p).item() for p in predictions]\n",
     "# Load label mapping\n",
     "label_mapping = pd.read_excel('../../../Output/Classifier Fitting/ResNet/label_mapping.xlsx')\n",
     "# Convert to dictionary\n",
     "label_mapping = label_mapping.to_dict()['Class']\n",
     "print(label_mapping)\n",
     "# Map predictions to labels\n",
-    "predictions_df['ResNet_predictions'] = predictions_df['ResNet_predictions'].map(label_mapping)\n",
+    "predictions_df['ResNet_Classification'] = predictions_df['ResNet_Classification'].map(label_mapping)\n",
     "# Save to Excel\n",
-    "predictions_df.to_excel('../../../Data/Predictions/ResNet/ResNet_predictions.xlsx', index=False)"
+    "predictions_df.to_excel('../../../Data/Predictions/ResNet/ResNet_Classifier_Predictions.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ResNet_predictions\n",
+       "ResNet_Classification\n",
        "Sedan          598\n",
        "SUV            449\n",
        "Convertible    268\n",
@@ -472,14 +481,14 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Value counts of ResNet predictions\n",
-    "predictions_df['ResNet_predictions'].value_counts()"
+    "predictions_df['ResNet_Classification'].value_counts()"
    ]
   }
  ],
